# md2pptx

./: .gitignore  Martin Master.pptx  README.md  card.py  funnel.py  globals.py  md2pptx  paragraph.py  processingOptions.py  pyproject.toml  runPython.py  setup.py  symbols.py  test_build_install.sh  test_module.py  user-guide.html  user-guide.md  user-guide.mdp
applescript/: copyPresentation.applescript
docs/: RunPython-Annotations.mdp  RunPython-Chart.mdp  RunPython-Checklist.mdp  RunPython-Drawing.mdp  RunPython-Examples.mdp  RunPython-General.mdp  RunPython-Preamble.mdp  RunPython-Table.mdp  RunPython-Template.mdp  RunPython-Text.mdp  RunPython-XML.mdp  RunPython.mdp  makedocs  two-up.md  user-guide.html  user-guide.md  user-guide.mdp
examples/: Three-Item-Slide.md  Three-Item-Slide.mdp  Three-Item-Slide.pptx  twoLists.md  twoLists.pptx  ~$Three-Item-Slide.pptx
media/: cross-black.afdesign  cross-colour.afdesign  partial-black.afdesign  query-colour.afdesign  tick-black.afdesign  unset-black.afdesign~lock~
src/md2pptx/: __init__.py  __main__.py  funnel.py  globals.py  main.py  md2pptx.py  media.py  paragraph.py  rectangle.py  runPython.py  symbols.py
src/md2pptx/media/: tick-colour.afdesign  unset-black.afdesign
src/media/: icon-template.afdesign  partial-colour.afdesign  query-black.afdesign
test/: XMLtest.md  XMLtest.pptx  XMLtest.xml  cardTest.md  cardTest.pptx  chartdata.csv  codetest.md  codetest.pptx  fullPresentation.md  fullPresentation.pptx  linktest.html  linktest.md  linktest.pptx  smartCells.md  smartCells.mdp  smartCells.pptx  smartCells.py  threeGraphics.pptx  twoGraphics.pptx  videotest  ~$linktest.pptx
