[project]
name = "md2pptx"
version = "6.2.1"
description = "Markdown to Powerpoint Converter"
readme = "README.md"
authors = [
    { name = "Martin Packman", email = "martin_packer@uk.ibm.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "python-pptx~=1.0.2",
    "lxml"
]

[project.optional-dependencies]
extra = [
    "cairosvg",
    "Pillow",
    "graphviz"
]

[project.scripts]
md2pptx = "md2pptx.md2pptx:main"

[project.urls]
"Homepage" = "https://github.com/md2pptx/md2pptx"
"Repository" = "https://github.com/md2pptx/md2pptx"
"Issues" = "https://github.com/md2pptx/md2pptx/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/md2pptx"]
include = ["src/md2pptx/*.pptx", "src/md2pptx/media/*"]
